--- a/VirtuPathAPI/wwwroot/sso/login-status.html
+++ b/VirtuPathAPI/wwwroot/sso/login-status.html
@@ -1,18 +1,22 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title>Login Status</title>
-</head>
 <body>
     <script>
-      window.addEventListener('message', async e => {
-        if (e.data.type !== 'getToken') return;
-        const resp = await fetch('/sso/login-status', { credentials: 'include' });
-        const { token } = await resp.json();
-        window.parent.postMessage({ type: 'token', token }, window.location.origin);
-      });
+        window.addEventListener('message', async e => {
+            if (e.data.type !== 'getToken') return;
+
+            // A) Hit the HTML endpoint *first* to set the cookie
+            await fetch('/sso/login-status', { credentials: 'include' });
+
+            // B) Then call the JSON endpoint to retrieve the JWT
+            const resp = await fetch('/sso/token', { credentials: 'include' });
+            const { token } = await resp.json();       // now valid JSON :contentReference[oaicite:2]{index=2}
+
+            // C) Post back to the parent frame
+            window.parent.postMessage({ type: 'token', token },
+                'https://virtu-path-ai.vercel.app'       // exactly your front‑end origin :contentReference[oaicite:3]{index=3}
+            );
+        });
     </script>
 </body>
 </html>
